WickedEngine/Utility/FAudio/src/stb_vorbis.h

   #define free(s)     ((void) 0)
#define C  (PLAYBACK_LEFT  | PLAYBACK_RIGHT | PLAYBACK_MONO)